<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:orientation="vertical"
    tools:context=".feature.login.view.LoginActivity">

    <TextView
        android:id="@+id/skip"
        style="@style/smallTextView2"
        android:layout_gravity="right"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:text="@string/skip"
        android:textColor="@color/transparent"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/icon" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/decoration_shape"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/ed_email_signup"
            android:layout_width="315dp"
            android:layout_height="53dp"
            android:layout_gravity="center"
            android:background="@drawable/txtbox_style"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:textColor="@color/transparent"
            android:fontFamily="@font/muli"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:textColorHint="@color/txt_slogan"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="315dp"
            android:layout_height="53dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/txtbox_style"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:textColor="@color/transparent"
            android:fontFamily="@font/muli"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:textColorHint="@color/txt_slogan"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/btn_forget_password"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="2dp"
            android:text="@string/forget_password"
            android:textAllCaps="false"
            android:fontFamily="@font/muli"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="242dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_style"
            android:fontFamily="@font/muli"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="242dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_marginTop="13dp"
            android:background="@drawable/btn_style_regular"
            android:fontFamily="@font/muli"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:backgroundTint="@null" />

        <TextView
            style="@style/smallTextView1"
            android:id="@+id/txt_by"
            android:layout_marginTop="10dp"
            android:text="@string/or_by"
            android:textColor="@color/txt_slogan"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fb_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                app:srcCompat="@drawable/facebook_signup" />

            <ImageView
                android:id="@+id/google_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                app:srcCompat="@drawable/google_signup" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>