<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:orientation="vertical"
    tools:context=".feature.signup.view.SignupActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/icon" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/decoration_shape"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txt_username"
            android:layout_width="315dp"
            android:layout_height="53dp"
            android:layout_gravity="center"
            android:background="@drawable/txtbox_style"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/muli"
            android:imeOptions="actionNext"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:textColor="@color/transparent"
            android:textColorHint="@color/transparent"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/ed_email"
            android:layout_width="315dp"
            android:layout_height="53dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/txtbox_style"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/muli"
            android:hint="@string/email"
            android:paddingStart="15dp"
            android:textColor="@color/transparent"
            android:textColorHint="@color/transparent"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="315dp"
            android:layout_height="53dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/txtbox_style"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/muli"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:textColor="@color/transparent"
            android:textColorHint="@color/transparent"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/ed_confirm_password_signup"
            android:layout_width="315dp"
            android:layout_height="53dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/txtbox_style"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:textColor="@color/transparent"
            android:fontFamily="@font/muli"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:paddingStart="15dp"
            android:textColorHint="@color/transparent"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="242dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_style"
            android:fontFamily="@font/muli"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="242dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_marginTop="13dp"
            android:background="@drawable/btn_style_regular"
            android:fontFamily="@font/muli"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="14sp"
            app:backgroundTint="@null" />

    </LinearLayout>
</LinearLayout>