<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    tools:background="@color/bg">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dime_15dp"
            android:clickable="true"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/movie_image"
                android:layout_width="150dp"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                android:src="@drawable/movie_img2" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/movie_name"
            style="@style/smallTextView"
            android:textColor="@color/white"
            android:text="@string/conversations_with" />

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:gravity="center_horizontal">

           <androidx.appcompat.widget.AppCompatRatingBar
               style="@style/Widget.AppCompat.RatingBar.Small"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:isIndicator="true"
               android:stepSize="0.5"
               android:progressBackgroundTint="@color/outline"
               android:progressTint="@color/colorStar"
               android:theme="@style/Widget.AppCompat.RatingBar.Small"
               android:rating="5" />
           <com.google.android.material.textview.MaterialTextView
               android:id="@+id/tv_number"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:fontFamily="@font/muli"
               android:text="@string/_5_0_10"
               android:textSize="@dimen/dime_10"
               android:textAppearance="@style/TextAppearance.AppCompat.Body1"
               android:textColor="@color/white" />


           <com.google.android.material.textview.MaterialTextView
               android:id="@+id/tv_count"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:fontFamily="@font/muli"
               android:text="@string/_375_votes"
               android:textSize="8dp"
               android:textAppearance="@style/TextAppearance.AppCompat.Body1"
               android:textColor="@color/transparent" />

       </LinearLayout>


    </LinearLayout>
</LinearLayout>