<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".feature.profile.view.ProfileActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/toolbar"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/ib_settings"
                    android:layout_width="?actionBarSize"
                    android:layout_height="?actionBarSize"
                    android:layout_alignParentEnd="true"
                    android:background="@android:color/transparent"
                    android:src="@drawable/settings_icon"
                    tools:ignore="SpeakableTextPresentCheck" />


                <Button
                    android:id="@+id/btn_back_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="?actionBarSize"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/arrow_back"
                    android:fontFamily="@font/muli"
                    android:text="@string/back"
                    android:textAllCaps="false" />


            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>


        <ImageView
            android:id="@+id/iv_user"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dime_30dp"
            android:scaleType="fitXY"
            android:src="@drawable/iv_user" />

        <TextView
            android:id="@+id/tv_username"
            style="@style/smallTextView"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:text="@string/adeline_henderson"
            android:textSize="18sp" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>
        <TextView
            android:id="@+id/favorite"
            style="@style/smallTextView"
            android:layout_width="match_parent"
            android:paddingStart="@dimen/dime_15dp"
            android:text="@string/favorite"
            android:layout_marginTop="125dp"
            android:textAlignment="textStart"
            android:textSize="18sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_favortie"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:spanCount="2"
        tools:itemCount="10"
        tools:listitem="@layout/movie_item" />


</androidx.constraintlayout.widget.ConstraintLayout>